<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">MJM Tools</string>
    <string name="settingsActivityName">Settings page</string>
    <string name="serviceName">MJM service</string>
    <string name="unknownVersionName">unknown</string>
    <string name="todo">TODO: place correct text here!</string>
    <string name="unimplementedOption">This option will be added in the next app version</string>

    <!-- Main activity -->

    <string name="mainLayoutSettingsButtonText">Settings</string>
    <string name="mainLayoutAboutText">Toolkit to improve Android system functionality.\n\nApp version: %1$s\nAuthor: Michał Miodek</string>

    <!-- Settings activity -->

    <string name="powerOptionsCaption">Power connected to the phone options</string>
    <string name="powerOptionsExplanation">This options are activated both when power is connected to the phone and when power is disconnected.\n\nWhen power is connected, selected options are turn on immediately.\n\nWhen power is disconnected app is waiting some configurable time, then options are turn off, but only when screen is off. When screen in on, app is waiting one more time.</string>
    <string name="powerConnectedOptionsCaption">When power is connected enable options:</string>
    <string name="powerConnectedWifiCheckboxText">WiFi</string>
    <string name="powerConnectedMobiledataCheckboxText">Mobile data</string>
    <string name="powerConnectedAutosyncCheckboxText">Auto sync</string>
    <string name="powerDisconnectedOptionsCaption">When power is disconnected disable options:</string>
    <string name="powerDisconnectedPeriodicTimeCaption">Delay time to disable optins, when powe disconnected (in minutes):</string>
    <string name="powerDisconnectedPeriodicTimeHint">Delay to disable options, when power disconnected</string>
    <string name="powerDisconnectedWifiCheckboxText">WiFi</string>
    <string name="powerDisconnectedMobiledataCheckboxText">Mobile data</string>
    <string name="powerDisconnectedAutosyncCheckboxText">Auto sync</string>
    <string name="powerOffOptionsCaption">Battery mode options</string>
    <string name="powerOffPeriodicCaption">When phone is running on battery, periodically try to disable options:</string>
    <string name="powerOffPeriodicTimeCaption">Periodic time to check options, when phone is running on battery:</string>
    <string name="powerOffPeriodicTimeHint">Periodic time to check options, when phone is running on battery</string>
    <string name="powerOffWifiCheckboxText">WiFi</string>
    <string name="powerOffMobiledataCheckboxText">Mobile data</string>
    <string name="otherOptionsCaption">Other options</string>
    <string name="useLogFileCheckboxText">Save app logs to file</string>
    <string name="logFileCaption">Log file path:</string>
    <string name="logFileEditboxHint">Log file path</string>
    <string name="logFileOpenButtonText">Open log file</string>
    <string name="logFileSendButtonText">Send log file to author</string>
    <string name="logFileClearButtonText">Clear log file</string>

</resources>