<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.mjmtools.SettingsActivity$PlaceholderFragment" >

        <TextView
            android:id="@+id/powerOptionsTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:onClick="onPowerOptionsTextviewClick"
            android:padding="4dp"
            android:text="@string/powerOptionsCaption"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/powerOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_horizontal_margin" >

            <TextView
                android:id="@+id/powerConnectedOptionsTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/powerConnectedOptionsCaption"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/layout_horizontal_margin" >

                <CheckBox
                    android:id="@+id/powerConnectedWifiCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerConnectedWifiCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerConnectedWifiCheckboxText"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerConnectedMobiledataCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerConnectedMobiledataCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerConnectedMobiledataCheckboxText"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerConnectedAutosyncCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerConnectedAutosyncCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerConnectedAutosyncCheckboxText"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/powerDisconnectedOptionsTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/powerDisconnectedOptionsCaption"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/layout_horizontal_margin" >

                <TextView
                    android:id="@+id/powerDisconnectedPeriodicTimeTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/powerDisconnectedPeriodicTimeCaption"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/powerDisconnectedPeriodicTimeEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/powerDisconnectedPeriodicTimeHint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerDisconnectedWifiCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerDisconnectedWifiCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerDisconnectedWifiCheckboxText"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerDisconnectedMobiledataCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerDisconnectedMobiledataCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerDisconnectedMobiledataCheckboxText"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerDisconnectedAutosyncCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerDisconnectedAutosyncCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerDisconnectedAutosyncCheckboxText"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/powerOffOptionsTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:onClick="onPowerOffOptionsTextviewClick"
            android:padding="4dp"
            android:text="@string/powerOffOptionsCaption"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/powerOffOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_horizontal_margin" >

            <TextView
                android:id="@+id/tmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/powerOffPeriodicCaption"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/layout_horizontal_margin" >

                <TextView
                    android:id="@+id/powerOffPeriodicTimeTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/powerOffPeriodicTimeCaption"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/powerOffPeriodicTimeEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/powerOffPeriodicTimeHint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerOffWifiCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerOffWifiCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerOffWifiCheckboxText"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/powerOffMobiledataCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:onClick="onPowerOffMobiledataCheckboxClick"
                    android:paddingLeft="0dp"
                    android:text="@string/powerOffMobiledataCheckboxText"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/otherOptionsTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:onClick="onOtherOptionsTextviewClick"
            android:padding="4dp"
            android:text="@string/otherOptionsCaption"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/otherOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_horizontal_margin" >

            <CheckBox
                android:id="@+id/useLogFileCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="onUseLogFileCheckboxClick"
                android:paddingLeft="0dp"
                android:text="@string/useLogFileCheckboxText"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/logFileNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/logFileNameTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logFileCaption"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/logFileNameExitbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logFileEditboxHint"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/logFileOpenButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onLogFileOpenButtonClick"
                    android:text="@string/logFileOpenButtonText" >
                </Button>

                <Button
                    android:id="@+id/logFileSendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onLogFileSendButtonClick"
                    android:text="@string/logFileSendButtonText" >
                </Button>

                <Button
                    android:id="@+id/logFileClearButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onLogFileClearButtonClick"
                    android:text="@string/logFileClearButtonText" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>